--- a/public/test-widget.html
+++ b/public/test-widget.html
@@ -146,8 +146,9 @@
       <h2>Embed Code</h2>
       <p>To embed this widget on any website, just add this single line:</p>
       <pre><code>&lt;script 
-  src="https://your-cdn.com/widget.js" 
+  src="https://your-cdn.com/embed.js" 
   data-chatbot-id="YOUR_CHATBOT_ID"
+  data-api-key="YOUR_API_KEY"
   data-api-url="https://your-backend.railway.app" 
   async&gt;
 &lt;/script&gt;</code></pre>
@@ -156,13 +157,12 @@
   
   <div class="arrow">👇 Click the chat button!</div>
 
-  <!-- SiteBot Widget Embed -->
+  <!-- XeloChat Widget Embed -->
   <script 
-    src="/widget.js" 
+    src="/embed.js" 
     data-chatbot-id="demo"
+    data-api-key="demo-key"
     data-api-url="http://localhost:3001"
-    data-bot-name="Demo Bot"
-    data-tagline="Testing the widget"
     async>
   </script>
 </body>
